# Minimal-Ray-Tracer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
core/: camera.h  ray.h
geometry/: hittable.h  material.h  sphere.h
math/: vec3.cpp  vec3.h
rendering/: renderer.h  scene_builder.h
